# home-systems

./: .gitignore  .gitmodules  .graphifyignore  .mise.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  Taskfile.yml  cli.py  compose.yaml  docker-compose.yml  go.mod  go.sum  go.work  go.work.sum  hermes-browser-goal.md  main.go  renovate.json  run.sh  test.sh  utils.fish
.submodules/nostos/: .gitignore  AGENTS.md  CHANGELOG.md  README.md  go.mod  go.sum  pyproject.toml
.submodules/nostos/cmd/nostos/: main.go
.submodules/nostos/internal/cli/: apply.go  apply_test.go  cli_test.go  cluster.go  commands.go  dashboard.go  flash.go  flash_test.go  helpers.go  init.go  mcp_cmd.go  node.go  node_install.go  render.go  root.go  schema_cmd.go  secrets.go  status.go  upgrade.go  upgrade_test.go
.submodules/nostos/internal/clockx/: clock.go  clock_test.go  fake.go
.submodules/nostos/internal/cluster/: bootstrap.go  bootstrap_test.go  cert.go  orchestrate.go  orchestrate_test.go  wipe.go
.submodules/nostos/internal/config/: boot_test.go  config.go  config_test.go  discovery.go  discovery_test.go
.submodules/nostos/internal/dashboard/: engine.go
.submodules/nostos/internal/execx/: commander.go  commander_test.go
.submodules/nostos/internal/image/: builder.go  builder_test.go  eeprom.go
.submodules/nostos/internal/mcp/: mcp.go
.submodules/nostos/internal/paths/: paths.go
.submodules/nostos/internal/provisioner/: errors.go  provisioner.go  provisioner_test.go
.submodules/nostos/internal/pxe/: build.go  build_multiarch_test.go  build_test.go  doctor.go  embed.go  (+9 more)
.submodules/nostos/tests/: conftest.py  test_cli.py  test_cluster.py  test_config.py  test_discovery.py  test_e2e.py  test_pxe_build.py  test_pxe_serve.py  test_registry.py  test_secrets.py  test_smoke.py  test_web.py
(+780 files in other folders)
